k8s/router-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: router-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: router
    ports:
        - port: 8000
          targetPort: 8000
