k8s/worker1-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: worker1-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: app1
    ports:
        - port: 8000
          targetPort: 8000
