k8s/worker2-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: worker2-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: app2
    ports:
        - port: 8000
          targetPort: 8000
